# eLogger

./: CMakeLists.txt  LICENSE  README.md  eLogger
include/: common.hpp  core.hpp  logger.hpp
src/: core.cpp  logger.cpp
